# file-sweeper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
infra/: .tflint.hcl
infra/envs/dev/: main.tf
infra/envs/prod/: main.tf
infra/modules/network/: main.tf
src/python_terraform_starter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sweeper/: cli.py
tests/: test_cli.py
