[project]
name = "python-terraform-starter"
version = "0.1.0"
description = "Practice stack: Python CLI + Terraform with CI and hooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "httpx>=0.27.0",
]

[project.scripts]
sweeper = "sweeper.cli:app"

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.7",
    "mypy>=1.11.1",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "types-requests",
]

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP","B","SIM","ARG"]
lint.ignore = ["E501"]
fix = true

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
ignore_missing_imports = true
